[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agentos"
version = "0.9.1"
description = "Production-grade runtime for autonomous AI agents"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
  "anthropic>=0.28.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "sqlalchemy>=2.0.30",
  "numpy>=1.26.0",
  "rich>=13.7.0",
  "typer>=0.12.0",
  "prometheus-client>=0.20.0",
  "opentelemetry-sdk>=1.24.0",
  "opentelemetry-exporter-otlp>=1.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0", "ruff>=0.4.0", "mypy>=1.10.0", "hypothesis>=6.100.0"]

[project.scripts]
agentos = "agentos.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"







